# PolyDiffusion

./: .gitignore  =1.6.0  BREAKTHROUGH_SUMMARY.md  CORRECTIONS_APPLIED.md  README.md  README.txt  README_WORKFLOW_SUMMARY.md  REVIEW_SUMMARY.md  SA_SCORE_CORRECTION_SUMMARY.md  SOLUTION_POLYMER_WILDCARDS.md  WORKFLOW_VERIFICATION.md  build_vocab_simple.py  slides.md  vocab_stage_a.txt
PolyDiffusion/: README.md  __init__.py  pyproject.toml  requirements.txt  setup.py  vocab.txt  vocab_character_stage_a.txt  vocab_character_stage_b.txt  vocab_stage_bc.txt
PolyDiffusion/PolyDiffusion.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
PolyDiffusion/configs/: model_base.yaml  stage_a.yaml  stage_b.yaml  stage_c.yaml  stage_c_Eg.yaml  stage_c_Td.yaml  stage_c_Tg.yaml  stage_c_Tm.yaml  stage_c_chi.yaml
PolyDiffusion/scripts/: __init__.py  build_plain_vocab.py  build_vocab.py  calculate_sa_score.py  evaluate_all_stages.sh  evaluate_stage.py  preprocess_polymer_dataset.py  quick_start_small.sh  sample_cli.py  train_all_properties.sh
PolyDiffusion/src/: __init__.py
PolyDiffusion/src/chem/: __init__.py  ap_smiles.py  atom_regex_vocab.py  base_vocab.py  character_vocab.py  plain_vocab.py  polymer_bpe_vocab.py  safe_vocab.py  valence.py  vocab.py  vocab_config.py  vocab_factory.py  vocab_legacy.py
PolyDiffusion/src/data/: __init__.py  collate.py  datasets.py
PolyDiffusion/src/losses/: __init__.py  objectives.py
PolyDiffusion/src/models/: __init__.py  diffusion_token.py  dit_token.py  flow_matching.py  heads.py  modules.py
PolyDiffusion/src/sampling/: __init__.py  decode.py  (+1 more)
(+38 files in other folders)
